--- a/dbank/package.json
+++ b/dbank/package.json
@@ -14,5 +14,8 @@
   "type": "module",
   "workspaces": [
     "src/dbank_frontend"
-  ]
+  ],
+  "dependencies": {
+    "react-spinners": "^0.15.0"
+  }
 }
